--- a/frontend/templates/themes_admin/inscription.html
+++ b/frontend/templates/themes_admin/inscription.html
@@ -47,6 +47,9 @@
                                     <label for="id_role">Rôle</label>
                                     {{ form.role }}
                                 </div>
+                                <div class="align-left">
+                                    <button type="submit" class="btn btn-info">S'inscrire</button>
+                                </div>
                             </form>
                         </div>
                     </div>
