--- a/frontend/templates/themes_admin/themes_caissier/commande_liste.html
+++ b/frontend/templates/themes_admin/themes_caissier/commande_liste.html
@@ -128,7 +128,11 @@
                 <td>
                     {% if selection.statut == 'virtuelle' %}
                         {% if selection.livraison_assignee %}
-                            <button class="btn btn-success" disabled>Livré</button>
+                            {% if selection.livraison.etat_de_livraison %}
+                                <button class="btn btn-success" disabled>Livré</button>
+                            {% else %}
+                                <button class="btn btn-success" disabled>Livreur Assigné</button>
+                            {% endif %}
                         {% else %}
                             <button class="btn btn-primary" data-toggle="modal" data-target="#assignDeliveryModal-{{ selection.id }}">Assigner Livreur</button>
                         {% endif %}
