--- a/frontend/templates/themes_admin/themes_gestionnaire/invoice_report.html
+++ b/frontend/templates/themes_admin/themes_gestionnaire/invoice_report.html
@@ -2,6 +2,7 @@
 {% block content %}
 {% load static %}
 
+    <script src="{% static 'themes_admin/js/fontawesom.js' %}"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap4.min.css">
@@ -18,12 +19,10 @@
     <link rel="stylesheet" src="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css">
     <link rel="stylesheet" src="https://cdn.datatables.net/buttons/1.7.1/css/buttons.dataTables.min.css">
 
+    <link rel="stylesheet" href="{% static 'themes_admin/css/invoice_report.css' %}">
 
-    <link rel="stylesheet" href="css/master.css">
 
-    <link rel="stylesheet" href="css/invoice_report.css">
-    
-<div class="body-page" id="body-page">
+    <div class="body-page" id="body-page">
         <div class="invoice-report">
             <div class="card">
                 <div class="card-header">
@@ -246,13 +245,6 @@
         </div>
     </div>
 {%endblock %}
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.7/js/dataTables.responsive.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.7/js/responsive.bootstrap4.min.js"></script>
-
-
     <script src="https://cdn.datatables.net/buttons/1.7.1/js/dataTables.buttons.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
@@ -262,62 +254,67 @@
 
 
     <script>
-        $(document).ready(function () {
-            $('#table1').DataTable({
-                dom: 'Bfrtip',
-                buttons: [
-                    'excel', 'pdf', 'print'
-                ]
-            });
+    $(document).ready(function () {
+        $('#table1').DataTable({
+            dom: 'Bfrtip',
+            buttons: [
+                'excel', 'pdf', 'print'
+            ]
         });
+    });
 
     </script>
 
-    <script src="js/main.js"></script>
-    <script src="js/themes.js"></script>
-    <script src="js/canvasjs.min.js"></script>
+    <script src="{% static 'themes_admin/js/main.js' %}"></script>
+    <script src="{% static 'themes_admin/js/themes.js' %}"></script>
+    <script src="{% static 'themes_admin/js/canvasjs.min.js' %}"></script>
 
     <script>
-        window.onload = function () {
+    window.onload = function () {
 
-            var chart = new CanvasJS.Chart("chartContainer", {
-                animationEnabled: true,
-                title: {
-                    text: ""
-                },
-                axisY: {
-                    title: "Revenue in USD",
-                    valueFormatString: "#0,,.",
-                    suffix: "mn",
-                    prefix: "$"
-                },
-                data: [{
-                    type: "splineArea",
-                    color: "rgba(54,158,173,.7)",
-                    markerSize: 5,
-                    xValueFormatString: "YYYY",
-                    yValueFormatString: "$#,##0.##",
-                    dataPoints: [
-                        { x: new Date(2000, 0), y: 3289000 },
-                        { x: new Date(2001, 0), y: 3830000 },
-                        { x: new Date(2002, 0), y: 2009000 },
-                        { x: new Date(2003, 0), y: 2840000 },
-                        { x: new Date(2004, 0), y: 2396000 },
-                        { x: new Date(2005, 0), y: 1613000 },
-                        { x: new Date(2006, 0), y: 2821000 },
-                        { x: new Date(2007, 0), y: 2000000 },
-                        { x: new Date(2008, 0), y: 1397000 },
-                        { x: new Date(2009, 0), y: 2506000 },
-                        { x: new Date(2010, 0), y: 2798000 },
-                        { x: new Date(2011, 0), y: 3386000 },
-                        { x: new Date(2012, 0), y: 6704000 },
-                        { x: new Date(2013, 0), y: 6026000 },
-                        { x: new Date(2014, 0), y: 2394000 },
-                        { x: new Date(2015, 0), y: 1872000 },
-                        { x: new Date(2016, 0), y: 2140000 }
-                    ]
-                }]
-            });
-            chart.render();
-        }
+        var chart = new CanvasJS.Chart("chartContainer", {
+            animationEnabled: true,
+            title: {
+                text: ""
+            },
+            axisY: {
+                title: "Revenue in USD",
+                valueFormatString: "#0,,.",
+                suffix: "mn",
+                prefix: "$"
+            },
+            data: [{
+                type: "splineArea",
+                color: "rgba(54,158,173,.7)",
+                markerSize: 5,
+                xValueFormatString: "YYYY",
+                yValueFormatString: "$#,##0.##",
+                dataPoints: [
+                    { x: new Date(2000, 0), y: 3289000 },
+                    { x: new Date(2001, 0), y: 3830000 },
+                    { x: new Date(2002, 0), y: 2009000 },
+                    { x: new Date(2003, 0), y: 2840000 },
+                    { x: new Date(2004, 0), y: 2396000 },
+                    { x: new Date(2005, 0), y: 1613000 },
+                    { x: new Date(2006, 0), y: 2821000 },
+                    { x: new Date(2007, 0), y: 2000000 },
+                    { x: new Date(2008, 0), y: 1397000 },
+                    { x: new Date(2009, 0), y: 2506000 },
+                    { x: new Date(2010, 0), y: 2798000 },
+                    { x: new Date(2011, 0), y: 3386000 },
+                    { x: new Date(2012, 0), y: 6704000 },
+                    { x: new Date(2013, 0), y: 6026000 },
+                    { x: new Date(2014, 0), y: 2394000 },
+                    { x: new Date(2015, 0), y: 1872000 },
+                    { x: new Date(2016, 0), y: 2140000 }
+                ]
+            }]
+        });
+        chart.render();
+    }
     </script>
+
+
+    </body>
+
+    </html>
