--- a/frontend/templates/themes_client/thankyou.html
+++ b/frontend/templates/themes_client/thankyou.html
@@ -20,8 +20,8 @@
           <div class="col-md-12 text-center">
             <span class="icon-check_circle display-3 text-success"></span>
             <h2 class="display-3 text-black">Merci!</h2>
-            <p class="lead mb-5">Votre commande a été finalisée avec succès et est en cours de traitement.</p>
-            <p><a href="{% url 'shop' %}" class="btn btn-md height-auto px-4 py-3 btn-primary">Revenir à la boutique</a></p>
+            <p class="lead mb-5">Votre commande a été finalisée avec succès et est en cours de traitement.</br> Vous serez notifié de l'issu de votre commande dans l'onglet "SUIVI DE COMMANDE" de votre menu de navigation</p>
+            <p><a href="{% url 'cart' %}" class="btn btn-md height-auto px-4 py-3 btn-primary">Suivre la Commande</a></p>
           </div>
         </div>
       </div>
