--- a/frontend/templates/themes_admin/edit_profile.html
+++ b/frontend/templates/themes_admin/edit_profile.html
@@ -76,7 +76,7 @@
                             {% endif %}
                         </div>
                         <div class="col-lg-6 d-none d-xl-block d-lg-block">
-                            <img src="{% static 'themes_admin/img/user3.jpg' %}" class="img-thumbnail">
+                            <img src="{% static 'themes_admin/img/user3.png' %}" class="img-thumbnail">
                         </div>
                     </div>
                 </div>
