--- a/frontend/templates/themes_admin/homepage_prepa.html
+++ b/frontend/templates/themes_admin/homepage_prepa.html
@@ -91,7 +91,7 @@
 </style>
 
 <div class="background">
-    <div class="centered-text">Bienvenue Mr/Mme/Mlle</div>
+    <div class="centered-text">Bienvenue Préparateur de <br> la pharmacie PharmApp</div>
 </div>
 
 <div class="content-container">
