--- a/frontend/templates/themes_admin/my_profile.html
+++ b/frontend/templates/themes_admin/my_profile.html
@@ -15,7 +15,7 @@
                         <img src="{% static 'themes_admin/img/myProfile.jpg' %}" class="card-img-top" style="height: 180px;">
                         <div class="card-body text-center">
                             <a class="avatar avatar-xl card-avatar card-avatar-top">
-                                <img src="{% static 'themes_admin/img/user3.jpg' %}" class="avatar-img rounded-circle border-card">
+                                <img src="{% static 'themes_admin/img/user3.png' %}" class="avatar-img rounded-circle border-card">
                             </a>
                             <p class="card-text text-muted">{{ role }}</p>
                             <table class="table">
