--- a/frontend/templates/themes_client/thankyou.html
+++ b/frontend/templates/themes_client/thankyou.html
@@ -1,6 +1,13 @@
 {% extends "themes_client/index.html" %}
 {% block content %}
 {% load static %}
+<style>
+  btn-primary {
+    background-color: #03BB00 !important;
+    border-color: #03BB00 !important;
+    
+  }
+</style>
 <body>
 
   <div class="site-wrap">
