--- a/frontend/templates/themes_admin/add_category.html
+++ b/frontend/templates/themes_admin/add_category.html
@@ -49,7 +49,7 @@
             <div class="user-info">
                 <div class="row">
                     <div class="user-img">
-                        <img src="{% static 'themes_admin/img/user3.jpg' %}">
+                        <img src="{% static 'themes_admin/img/user3.png' %}">
                     </div>
                     <div>
                         <p class="user-name">{{ request.session.user_name }}</p>
@@ -79,7 +79,7 @@
                                 data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
                                 aria-controls="collapseThree">
                                 <a class="option-name"><i class="fas fa-capsules"></i><span
-                                        style="margin-left:4px;">Medicaments</span></a>
+                                        style="margin-left:4px;">Médicaments</span></a>
                             </button>
                         </h2>
                     </div>
@@ -206,7 +206,7 @@
                         <ul class="dropdown-menu user-profile" role="menu" aria-labelledby="dLabel">
 
                             <div class="user-heading">
-                                <div><img src="{% static 'themes_admin/img/user3.jpg' %}" class="user-img2"></div>
+                                <div><img src="{% static 'themes_admin/img/user3.png' %}" class="user-img2"></div>
                                 <div class="user-name2">{{ request.session.user_name }}</div>
                                 <div class="user-email2">{{ request.session.user_email }}</div>
                                 </h4>
