--- a/frontend/templates/themes_admin/themes.html
+++ b/frontend/templates/themes_admin/themes.html
@@ -28,12 +28,12 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex justify-content-between align-items-center">
-                        Themes
+                        Thèmes
                     </div>
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <label class="color-label">Color: </label>
+                        <label class="color-label">Couleur </label>
                     </div>
                     <div class="row color-switch">
                         <button onclick="info()" class="btn btn-info info"></button>
