--- a/frontend/templates/themes_admin/themes_caissier/homepage_car.html
+++ b/frontend/templates/themes_admin/themes_caissier/homepage_car.html
@@ -49,7 +49,7 @@
             <div class="user-info">
                 <div class="row">
                     <div class="user-img">
-                        <img src="{% static 'themes_admin/img/user3.jpg' %}">
+                        <img src="{% static 'themes_admin/img/user3.png' %}">
                     </div>
                     <div>
                         <p class="user-name">{{ request.session.user_name }}</p>
@@ -204,7 +204,7 @@
                         <ul class="dropdown-menu user-profile" role="menu" aria-labelledby="dLabel">
 
                             <div class="user-heading">
-                                <div><img src="{% static 'themes_admin/img/user3.jpg' %}" class="user-img2"></div>
+                                <div><img src="{% static 'themes_admin/img/user3.png' %}" class="user-img2"></div>
                                 <div class="user-name2">{{ request.session.user_name }}</div>
                                 <div class="user-email2">{{ request.session.user_email }}</div>
                                 </h4>
@@ -357,7 +357,7 @@
 </style>
 
 <div class="background">
-    <div class="centered-text">Bienvenue Mr/Mme/Mlle</div>
+    <div class="centered-text">Bienvenue caissier(ère) <br>de la pharmacie PharmApp</div>
 </div>
 
 <div class="content-container">
