--- a/frontend/templates/themes_admin/themes_pharmacien/medicine_list.html
+++ b/frontend/templates/themes_admin/themes_pharmacien/medicine_list.html
@@ -129,7 +129,7 @@
             <div class="user-info">
                 <div class="row">
                     <div class="user-img">
-                        <img src="{% static 'themes_admin/img/user3.jpg' %}">
+                        <img src="{% static 'themes_admin/img/user3.png' %}">
                     </div>
                     <div>
                         <p class="user-name">{{ request.session.user_name }}</p>
@@ -306,7 +306,7 @@
                         <ul class="dropdown-menu user-profile" role="menu" aria-labelledby="dLabel">
 
                             <div class="user-heading">
-                                <div><img src="{% static 'themes_admin/img/user3.jpg' %}" class="user-img2"></div>
+                                <div><img src="{% static 'themes_admin/img/user3.png' %}" class="user-img2"></div>
                                 <div class="user-name2">{{ request.session.user_name }}</div>
                                 <div class="user-email2">{{ request.session.user_email }}</div>
                                 </h4>
