--- a/frontend/templates/themes_client/index.html
+++ b/frontend/templates/themes_client/index.html
@@ -157,6 +157,7 @@
 
                 <ul class="dropdown-menu user-profile" role="menu" aria-labelledby="dLabel">
                     <div class="user-heading">
+                         <img src="{% static 'themes_client/images/perso1.png' %}" width="100" height="100" alt="Logo">
                         <div class="user-name2">{{ request.session.user_name }}</div>
                         <div class="user-email2">{{ request.session.user_email }}</div>
                     </div>
@@ -176,6 +177,7 @@
                         </a>
                     </div>
                 </ul>
+
             {% else %}
                 <!-- User is not logged in -->
                 <a href="{% url 'page_connexion' %}">
@@ -394,8 +396,8 @@
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright &copy;
               <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-              with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"
-                class="text-primary">Colorlib</a>
+              with <i class="icon-heart" aria-hidden="true"></i> by <a href="" target="_blank"
+                class="text-primary">PharmApp</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
