--- a/frontend/templates/themes_admin/add_category.html
+++ b/frontend/templates/themes_admin/add_category.html
@@ -165,7 +165,6 @@
                                             </div>
                                             <div>
                                                 <h4 class="item-title">Date de péremption du médicament</h4>
-                                                <p class="item-info">Marketing 101, Video Assignment</p>
                                             </div>
                                         </div>
                                     </div>
@@ -180,8 +179,7 @@
                                                 <i class="fas fa-battery-quarter"></i>
                                             </div>
                                             <div>
-                                                <h4 class="item-title">Out of Stock Medicine</h4>
-                                                <p class="item-info">Marketing 101, Video Assignment</p>
+                                                <h4 class="item-title">Médicaments à réapprovisionner</h4>
                                             </div>
                                         </div>
                                     </div>
