--- a/frontend/templates/themes_admin/themes_pharmacien/medicine_list.html
+++ b/frontend/templates/themes_admin/themes_pharmacien/medicine_list.html
@@ -102,6 +102,10 @@
         .zoomable:hover {
             transform: scale(1.5); /* Agrandir l'image au survol */
         }
+        .btn-primary {
+            background-color: #17a2b8 !important;
+            border-color: #17a2b8 !important;
+        }
     </style>
 
 </head>
@@ -197,28 +201,6 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="card">
-                    <div class="card-header" id="headingSixteen">
-                        <h2>
-                            <button class="btn btn-link btn-block text-left collapsed" type="button"
-                                data-toggle="collapse" data-target="#collapseFSixteen" aria-expanded="false"
-                                aria-controls="collapseFSixteen">
-                                <a class="option-name"><i class="fa fa-cog" aria-hidden="true"
-                                        style="margin-left: 3px;"></i><span style="margin-left: 2px;">Paramètres</span></a>
-                            </button>
-                        </h2>
-                    </div>
-                    <div id="collapseFSixteen" class="collapse" aria-labelledby="headingSixteen"
-                        data-parent="#accordionExample">
-                        <div class="card-body">
-                            <ul>
-                                <li><a href="#">Langage</a></li>
-                                <li><a href="{% url 'themes' %}">Thèmes</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
             </div>
         </nav>
     </div>
@@ -265,7 +247,6 @@
                                             </div>
                                             <div>
                                                 <h4 class="item-title">Date d'expiration</h4>
-                                                <p class="item-info">Marketing 101, Video Assignment</p>
                                             </div>
                                         </div>
                                     </div>
@@ -280,8 +261,7 @@
                                                 <i class="fas fa-battery-quarter"></i>
                                             </div>
                                             <div>
-                                                <h4 class="item-title">Out of Stock Medicine</h4>
-                                                <p class="item-info">Marketing 101, Video Assignment</p>
+                                                <h4 class="item-title">Médicaments à réapprovisionner</h4>
                                             </div>
                                         </div>
                                     </div>
